--- a/ReportMicroService/appsettings.json
+++ b/ReportMicroService/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "Jwt": {
+    "Key": "eLlO3LhzXDvWFxiMBsmg2zCir49SRD3xCdh2IfuptfI=",
+    "Issuer": "FarmaArquiSoft",
+    "Audience": "FarmaArquiSoftClients"
+  },
+  "ExternalServices": {
+    "ClientsUrl": "http://localhost:5142/",
+    "SalesUrl": "http://localhost:5104/",
+    "UsersUrl": "http://localhost:5031/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
