--- a/Report.Application/Report.Application.csproj
+++ b/Report.Application/Report.Application.csproj
@@ -7,12 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.1" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.15.0" />
     <PackageReference Include="MySql.Data" Version="9.5.0" />
+    <PackageReference Include="QuestPDF" Version="2025.12.0" />
+    <PackageReference Include="SkiaSharp" Version="3.119.1" />
+    <PackageReference Include="System.Net.Http.Json" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Report.Domain\Report.Domain.csproj" />
+	<ProjectReference Include="..\Report.Infrastructure\Report.Infrastructure.csproj" />
+
   </ItemGroup>
 
 </Project>
