--- a/Report.Infrastructure/Report.Infrastructure.csproj
+++ b/Report.Infrastructure/Report.Infrastructure.csproj
@@ -7,16 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Persistence\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.1" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.15.0" />
     <PackageReference Include="MySql.Data" Version="9.5.0" />
+    <PackageReference Include="QuestPDF" Version="2025.12.0" />
+    <PackageReference Include="SkiaSharp" Version="3.119.1" />
+    <PackageReference Include="System.Net.Http.Json" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Report.Application\Report.Application.csproj" />
     <ProjectReference Include="..\Report.Domain\Report.Domain.csproj" />
   </ItemGroup>
 
